# disclaimrNG

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.dev.yml  compose.traefik.yml  compose.yml  disclaimr.py  pyproject.toml
.github/workflows/: ci.yml
disclaimr/: __init__.py  configuration_helper.py  ldap_helper.py  logging_helper.py  milter_helper.py  query_cache.py
disclaimrweb/: settings.py  urls.py  wsgi.py
disclaimrwebadmin/: admin.py  apps.py  constants.py  models.py  urls.py
disclaimrwebadmin/management/commands/: bootstrap_admin.py  sync_directory_servers.py  sync_tenants.py
disclaimrwebadmin/static/disclaimrwebadmin/css/: admin_chrome.css  docs.css  help_button.css  language_switcher.css  signature_test.css
disclaimrwebadmin/static/disclaimrwebadmin/directory_server/: directory_server.css  directory_server.js
disclaimrwebadmin/static/disclaimrwebadmin/js/: help_button.js  language_switcher.js
disclaimrwebadmin/static/disclaimrwebadmin/template_editor/: template_editor.css  template_editor.js
disclaimrwebadmin/templates/admin/: login.html
disclaimrwebadmin/templates/admin/disclaimrwebadmin/: docs.html  signature_test.html
disclaimrwebadmin/templates/admin/disclaimrwebadmin/directoryserver/: change_form.html
disclaimrwebadmin/templates/disclaimrwebadmin/widgets/: template_editor.html
disclaimrwebadmin/views/: __init__.py  directory_server.py  docs.py  preview.py  signature_image.py  signature_test.py
disclaimrwebadmin/widgets/: __init__.py  template_editor.py
docker/: entrypoint.sh
docs/de/: configuration.md  directory-servers.md  index.md  installation.md  signatures.md  tenants.md  troubleshooting.md  walkthrough.md
docs/en/: configuration.md  directory-servers.md  index.md  installation.md  signatures.md  tenants.md  troubleshooting.md  walkthrough.md
locale/de/LC_MESSAGES/: django.po
tests/: conftest.py  test_bootstrap_admin.py  test_directory_server_admin.py  test_directoryserver.py  test_disclaimer.py  test_docs_view.py  test_ldap_helper.py  test_performance.py  test_preview_view.py  test_signature_image_quick_upload.py  test_signature_images.py  test_signature_test_view.py  test_sync_directory_servers.py  test_tenants.py
